# pythonProject28

./: pyproject.toml
ads/: admin.py  models.py  serializers.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_category_name.py
ads/urls/: ad_urls.py  cat_urls.py
avito/: settings.py  urls.py
data/: ads.json  categories.json  data_json.py  location.json
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_location_lat_alter_location_lng_and_more.py  0003_user_age.py
